--- a/scss/style.css
+++ b/scss/style.css
@@ -429,6 +429,59 @@ body img {
 }
 
 @media screen and (max-width: 800px) {
+  #container-initial {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #container-initial img {
+    width: 605px;
+    height: 660px;
+    border-radius: 10px;
+  }
+  #container-initial .menu {
+    margin-top: 2rem;
+  }
+  #container-initial .menu ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding: 0.5rem;
+    list-style: none;
+  }
+  #container-initial .menu ul a {
+    color: #111111;
+    text-decoration: none;
+  }
+  #container-initial .menu ul li {
+    font-size: 1.4rem;
+  }
+  #container-initial .menu ul li + li {
+    margin-left: 1rem;
+  }
+  #container-initial .menu .text-header {
+    margin-top: 5%;
+  }
+  #container-initial .menu .text-header h2 {
+    font-weight: 400;
+    font-size: 1.8rem;
+  }
+  #container-initial .menu .text-header h1 {
+    font-size: 3.7rem;
+  }
   .aboutmeContent {
     width: 100%;
     background-color: transparent;
@@ -444,11 +497,12 @@ body img {
   }
   .aboutmeContent figure img {
     position: relative;
-    width: 60%;
+    width: 40%;
     border: 2px solid #111111;
+    margin-left: 4%;
   }
   .aboutmeContent figure .img1 {
-    width: 70%;
+    width: 50%;
     border: 2px solid #111111;
   }
   .aboutmeContent figure .img2 {
@@ -462,6 +516,8 @@ body img {
     color: #111111;
     font-size: 1.3rem;
     text-align: justify;
+    max-width: 550px;
+    margin-top: 2%;
     margin-left: 2%;
     margin-right: 2%;
   }
