--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ $colorRose:rgb(182, 53, 81);
 
 * {
     padding: 0;
-    margin: 0;
+    // margin: 0;
     box-sizing: border-box;
 }
 
@@ -309,6 +309,7 @@ body {
         width: auto;
         height: auto;
         text-align: center;
+        margin: 0%;
     }
 
     .slides-front {
@@ -446,8 +447,12 @@ body {
 }
 
 @media screen and (max-width: 800px) {
-    #container-initial {
 
+    body {
+        max-width: 100%;
+    }
+
+    #container-initial {
         margin-bottom: 20%;
         display: flex;
         flex-direction: column;
@@ -455,10 +460,10 @@ body {
 
         img {
             z-index: -2;
-            margin-top: 20%;
+            margin-top: 3%;
             position: absolute;
-            width: 135%;
-            height: 80vh;
+            width: 98%;
+            height: 100%;
             border-radius: 10px;
         }
 
@@ -502,7 +507,7 @@ body {
                 }
 
                 h1 {
-                    font-size: 3.7rem;
+                    font-size: 2.5rem;
                 }
 
             }
@@ -609,7 +614,7 @@ body {
     }
 
     .slide img {
-        max-width: 80%;
+        max-width: 90%;
     }
 
     .nav label {
@@ -725,9 +730,9 @@ body {
     }
 
     .contactContent {
-        margin-left: 15%;
+        margin-left: 5%;
         color: $primaryColor;
-        background-color: $transparentColor;
+        background: $transparentColor;
         width: 100%;
         height: 90%;
         display: grid;
@@ -735,7 +740,7 @@ body {
 
         .leftContactContent {
             background-color: $transparentColor;
-            width: 100%;
+            width: 90%;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -755,17 +760,15 @@ body {
             }
 
             form {
-                display: flex;
+
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 width: 90%;
-                height: 100%;
+
                 background-color: $transparentColor;
                 border-radius: 5px;
                 padding: 10px;
-                margin: 10px;
-
 
                 input {
                     width: 90%;
@@ -844,14 +847,14 @@ body {
 
     footer {
         background-color: $primaryColor;
-        width: 135%;
+        width: 100%;
         height: 12vh;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
         color: $colorWhite;
-        font-size: 20px;
+        font-size: 15px;
         font-weight: bold;
 
         a {
